--- a/src/components/calls/change.ipynb
+++ b/src/components/calls/change.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "42218a6c",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<li>Pre-submission of abstracts is a strict requirement. All papers and abstracts have to be submitted electronically via EasyChair.</li>\n",
-      "<li>All research submissions must be in English and no longer than 15 pages (excluding references and the \"Declaration of use of Generative AI” section). Papers that exceed this limit will be rejected without review.</li>\n",
-      "<li>Submissions must be either in PDF or HTML, formatted in the style of the Springer Publications format for Lecture Notes in Computer Science (LNCS). For details on the LNCS style, see Springer’s Author Instructions. For HTML submission guidance, please see the ​HTML submission guide.</li>\n",
-      "<li>Submissions to the ISWC 2026 In-Use track are not anonymous. We encourage embedding metadata in the PDF or HTML to provide a machine-readable link from the paper to the resource.</li>\n",
-      "<li>Authors of accepted papers will be required to provide semantic annotations for the abstract of their submission, which will be made available on the conference website. Details will be provided at the time of acceptance.</li>\n",
-      "<li>Accepted papers will be distributed to conference attendees and also published by Springer in the conference proceedings, as part of the Lecture Notes in Computer Science series.</li>\n",
-      "<li>At least one author of each accepted paper must register for the conference and present the paper. As in previous years, students will be able to apply for travel/registration support to attend the conference. Preference will be given to students who are the first authors of papers accepted to the main conference or the doctoral consortium, followed by those who are the first authors of papers accepted to ISWC workshops and the Poster & Demo session.</li>\n"
+      "<li>Clear prerequisites and step-by-step instructions for downloading/installing software or registering for online services should be made available on the tutorial webpage well in advance. This ensures participants have sufficient time to prepare before the tutorial begins.</li>\n",
+      "<li>Allocate time at the beginning of the tutorial to guide participants through any necessary installation or registration processes. Organisers should not assume that all attendees will arrive fully prepared.</li>\n",
+      "<li>Develop a contingency plan to address potential issues such as limited Wi-Fi bandwidth (e.g., providing USB drives with large files) or the unavailability of online services (e.g., pre-recorded videos of demonstrations).</li>\n"
      ]
     }
    ],
@@ -28,13 +24,10 @@
     "\n",
     "# Example usage\n",
     "input_text = \"\"\"\n",
-    "Pre-submission of abstracts is a strict requirement. All papers and abstracts have to be submitted electronically via EasyChair.\n",
-    "All research submissions must be in English and no longer than 15 pages (excluding references and the \"Declaration of use of Generative AI” section). Papers that exceed this limit will be rejected without review.\n",
-    "Submissions must be either in PDF or HTML, formatted in the style of the Springer Publications format for Lecture Notes in Computer Science (LNCS). For details on the LNCS style, see Springer’s Author Instructions. For HTML submission guidance, please see the ​HTML submission guide.\n",
-    "Submissions to the ISWC 2026 In-Use track are not anonymous. We encourage embedding metadata in the PDF or HTML to provide a machine-readable link from the paper to the resource.\n",
-    "Authors of accepted papers will be required to provide semantic annotations for the abstract of their submission, which will be made available on the conference website. Details will be provided at the time of acceptance.\n",
-    "Accepted papers will be distributed to conference attendees and also published by Springer in the conference proceedings, as part of the Lecture Notes in Computer Science series.\n",
-    "At least one author of each accepted paper must register for the conference and present the paper. As in previous years, students will be able to apply for travel/registration support to attend the conference. Preference will be given to students who are the first authors of papers accepted to the main conference or the doctoral consortium, followed by those who are the first authors of papers accepted to ISWC workshops and the Poster & Demo session.\n",
+    "Clear prerequisites and step-by-step instructions for downloading/installing software or registering for online services should be made available on the tutorial webpage well in advance. This ensures participants have sufficient time to prepare before the tutorial begins.\n",
+    "Allocate time at the beginning of the tutorial to guide participants through any necessary installation or registration processes. Organisers should not assume that all attendees will arrive fully prepared.\n",
+    "Develop a contingency plan to address potential issues such as limited Wi-Fi bandwidth (e.g., providing USB drives with large files) or the unavailability of online services (e.g., pre-recorded videos of demonstrations).\n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "output = text_to_li(input_text)\n",
@@ -44,7 +37,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -58,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
